--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="keywords" content="Philibert Dugas, Philibertd">
-    <meta name="author" content="Philibert Dugas">i
+    <meta name="author" content="Philibert Dugas">
     <link href="/images/favicon.ico" rel="shortcut icon" type="image/x-icon">
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
