--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,9 @@
     <meta name="keywords" content="Philibert Dugas, Philibertd">
     <meta name="author" content="Philibert Dugas">
     <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon">
+    <link href="/static/css/skeleton.css" rel="stylesheet">
+    <link href="/static/css/style.css" rel="stylesheet">
+    <link href="/static/css/font-awesome.min.css" rel="stylesheet">
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
