Change the border to be more responsibe

--- a/_layouts/info.html
+++ b/_layouts/info.html
@@ -16,7 +16,7 @@ layout: default
       <h1>Philibert Dugas</h1>
       <h2>Developer @Shopify, software enthousiast</h2>
     </div>
-    <div class="nine columns">
+    <div class="nine columns content">
       {{ content }}
     </div>
   </div>
