Adding twitter icon

--- a/_layouts/info.html
+++ b/_layouts/info.html
@@ -12,6 +12,9 @@ layout: default
         <li>
           <a href="https://github.com/PhilibertDugas" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
         </li>
+        <li>
+          <a href="https://twitter.com/DugasPhilibert" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+        </li>
       </ul>
       <h1>Philibert Dugas</h1>
       <h2>Developer @Shopify, software enthousiast</h2>
