--- a/_layouts/info.html
+++ b/_layouts/info.html
@@ -17,7 +17,7 @@ layout: default
         </li>
       </ul>
       <h1>Philibert Dugas</h1>
-      <h2>Developer @Shopify, software enthousiast</h2>
+      <h2>Developer @Shopify, software enthusiast</h2>
     </div>
     <div class="nine columns content">
       {{ content }}
