First blog post -- woot

--- a/_layouts/info.html
+++ b/_layouts/info.html
@@ -4,7 +4,7 @@ layout: default
 <div class="container">
   <div class="row">
     <div class="profile three columns">
-      <img id="avatar" src="/static/images/phili.png" alt="avatar"/>
+      <a href="/index.html"><img id="avatar" src="/static/images/phili.png" alt="avatar"/></a>
       <ul id="social">
         <li>
           <a href="https://ca.linkedin.com/in/philibertdugas" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
@@ -16,8 +16,8 @@ layout: default
           <a href="https://twitter.com/DugasPhilibert" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
         </li>
       </ul>
-      <h1>Philibert Dugas</h1>
-      <h2>Developer @Shopify, software enthusiast</h2>
+      <h2>Philibert Dugas</h2>
+      <h5>Developer @Shopify, software enthusiast</h5>
     </div>
     <div class="nine columns content">
       {{ content }}
