--- a/_layouts/info.html
+++ b/_layouts/info.html
@@ -4,7 +4,7 @@ layout: default
 <div class="container">
   <div class="row">
     <div class="profile three columns">
-      <a href="/index.html"><img id="avatar" src="/static/images/phili.png" alt="avatar"/></a>
+      <a href="/"><img id="avatar" src="/static/images/phili.png" alt="avatar"/></a>
       <ul id="social">
         <li>
           <a href="https://ca.linkedin.com/in/philibertdugas" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
