--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,3 +4,5 @@ layout: info
 <article>
   {{ content }}
 </article>
+
+<p>You can find me on Twitter <a href="https://twitter.com/DugasPhilibert">@DugasPhilibert</a></p>
