--- a/_layouts/info.html
+++ b/_layouts/info.html
@@ -17,7 +17,7 @@ layout: default
         </li>
       </ul>
       <h2>Philibert Dugas</h2>
-      <h5>Developer @Shopify, software enthusiast</h5>
+      <h6>Developer <a href="https://www.shopify.ca/">@Shopify</a>, software enthusiast</h6>
     </div>
     <div class="nine columns content">
       {{ content }}
